@@ -1,7 +1,11 @@
 Revision history for Ubic-Service-Plack
 
 {{$NEXT}}
-        Compatible with new ubic 'default user' feature
+        * Compatible with new ubic 'default user' feature
+        * Support arrayref values in server_args
+        * Support single-letter keys in server_args
+        * bin() method, pidfile() method, refactor to use
+          Ubic::Service::Skeleton instead of Ubic::Service::Common
 
 1.12    Sun Nov 07, 2010
         Pass 'port' option to plackup.
